# avstack-docs

./: .gitignore  .gitmodules  .readthedocs.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  library-index.md  requirements.txt
docs/how-to-guides/: 0-reference-frames.md  0-spinning-up.md  0-transforming-data.ipynb  0-transforming-data.md  0-understand-objects.md  0-understand-scenes.md  0-visualize-data.ipynb  0-visualize-dataset.md  1-design-av-models.ipynb  1-run-perception.ipynb  1-track-objects.ipynb  1-trade-studies.ipynb  2-generate-carla-dataset.md  2-generate-collaborative-carla-dataset.md  2-run-carla-agent.md  2-train-perception.md
docs/how-to-guides/.ipynb_checkpoints/: 0-transforming-data-checkpoint.ipynb  0-visualize-data-checkpoint.ipynb  1-run-perception-checkpoint.ipynb  1-track-objects-checkpoint.ipynb  1-trade-studies-checkpoint.ipynb  2-generate-carla-dataset-checkpoint.md  2-generate-collaborative-carla-dataset-checkpoint.md
