[tool.poetry]
name = "avstack-docs"
version = "0.1.0-alpha.3"
description = "Documentation for AVstack"
authors = ["Spencer Hallyburton <spencer.hallyburton@duke.edu>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://avstack.org"
repository = "https://github.com/avstack-lab/avstack-docs"
keywords = ["self-driving", "autonomy", "perception", "planning", "control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = "~3.10"
lib-avstack-core = { path = "lib-avstack-core", develop = true }
lib-avstack-api = { path = "lib-avstack-api", develop = true }

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocstrings-python = "^0.8.3"
mkdocs-material = "^8.0"
mkdocs-monorepo-plugin = "^1.0.4"
mkdocs-jupyter = "^0.22.0"
griffe = "0.32.3"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-cov = "^4"
bandit = "^1.7"
black = "~22.12.0"
mypy = "^0"
isort = "^5.11"
flake8 = "^5.0"
autoflake = "^1"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
